--- a/client/src/layout/style.css
+++ b/client/src/layout/style.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px 0;
   height: 80px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: white;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
 }
