--- a/client/src/components/Sidebar/style.css
+++ b/client/src/components/Sidebar/style.css
@@ -23,3 +23,30 @@
 .sidebar-left .block-two {
   padding-bottom: 30px;
 }
+
+.sidebar-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.block-bottom {
+  height: 100%;
+}
+
+.no-users {
+  margin-top: 3rem;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
+  color: #64748b;
+}
+
+.messageSidebar {
+  font-size: 1.125rem;
+  text-align: center;
+  color: #94a3b8;
+}
