--- a/client/src/components/Message/style.css
+++ b/client/src/components/Message/style.css
@@ -17,26 +17,69 @@
   height: calc(100vh - 74px - 70px);
   overflow-y: auto;
   background-image: url("../../assets/background.jpeg");
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .send-message {
   display: flex;
   margin-top: 20px;
+  overflow-y: auto;
 }
 
-.inputt {
-  width: 650px;
-  margin: 0 20px;
-}
-
-.control{
+.control {
   display: flex;
-  gap: 8px
+  gap: 10px;
+  padding-left: 20px;
+}
+.inputMSG{
+  width: 700px;
 }
 
-.control:first-child {
-  margin-left: 40px;
+/* ------------ CSS CHO PREVIEW ------------- */
+
+.previewContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 150px;
+  left: 600px;
+  width: 300px;
+  height: 300px;
 }
 
-.uploadfile {
+.previewItem {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.image-preview,
+.video-preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+/* Nút xóa file */
+.removeFileBtn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 14px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
