--- a/client/src/components/Message/style.css
+++ b/client/src/components/Message/style.css
@@ -17,28 +17,41 @@
   height: calc(100vh - 74px - 70px);
   overflow-y: auto;
   background-image: url("../../assets/background.jpeg");
+  background-size: cover;
+  /* Phủ toàn bộ mà vẫn giữ tỷ lệ ảnh */
+  background-repeat: no-repeat;
+  background-position: center;
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  opacity: 50%;
 }
 
 .send-message {
   display: flex;
-  margin-top: 20px;
   overflow-y: auto;
+  background-color: antiquewhite;
 }
 
 .control {
   display: flex;
   gap: 10px;
   padding-left: 20px;
+  padding-top: 10px;
 }
 .inputMSG{
   width: 700px;
 }
 
+
 /* ------------ CSS CHO PREVIEW ------------- */
+
+.spin{
+  position: absolute;
+  top: 150px;
+  left: 150px;
+}
 
 .previewContainer {
   display: flex;
